camera icon for dark mode

--- a/_posts/potpourri/2020-09-03-snapshots-mar-2022-toronto.html
+++ b/_posts/potpourri/2020-09-03-snapshots-mar-2022-toronto.html
@@ -2,6 +2,7 @@
 title: "March 2022: Toronto"
 layout: post
 image: /assets/images/camera.png
+image-dark: /assets/images/camera-dark.png
 headerImage: true
 tag: 
 - Toronto
