--- a/_posts/potpourri/2020-09-05-snapshots-aug-2022-sf.html
+++ b/_posts/potpourri/2020-09-05-snapshots-aug-2022-sf.html
@@ -2,6 +2,7 @@
 title: "August 2022: San Francisco"
 layout: post 
 image: /assets/images/camera.png 
+image-dark: /assets/images/camera-dark.png
 headerImage: true
 tag: 
 - San Francisco 
