--- a/_posts/potpourri/2020-09-07-snapshots-dec-2022-nyc.html
+++ b/_posts/potpourri/2020-09-07-snapshots-dec-2022-nyc.html
@@ -2,6 +2,7 @@
 title: "December 2022: NYC"
 layout: post 
 image: /assets/images/camera.png
+image-dark: /assets/images/camera-dark.png
 headerImage: true 
 tag: 
 - New York City
