--- a/_posts/potpourri/2020-09-08-snapshots-jan-2023-mar-2023.html
+++ b/_posts/potpourri/2020-09-08-snapshots-jan-2023-mar-2023.html
@@ -2,6 +2,7 @@
 title: "January 2023  - March 2023"
 layout: post 
 image: /assets/images/camera.png 
+image-dark: /assets/images/camera-dark.png
 headerImage: true 
 category: potpourri
 rel_path: jan23-mar23
