--- a/_posts/potpourri/2020-09-10-snapshots-mar2023-may2023.html
+++ b/_posts/potpourri/2020-09-10-snapshots-mar2023-may2023.html
@@ -2,6 +2,7 @@
 title: "March 2023 - May 2023"
 layout: post 
 image: /assets/images/camera.png 
+image-dark: /assets/images/camera-dark.png
 category: potpourri 
 rel_path: mar23-may23
 description: "Snapshots of a STEM student: March 2023 - May 2023"
