--- a/_posts/potpourri/2020-09-01-snapshots-sept-2020-may-2021.html
+++ b/_posts/potpourri/2020-09-01-snapshots-sept-2020-may-2021.html
@@ -2,6 +2,7 @@
 title: "September 2020 - May 2021"
 layout: post
 image: /assets/images/camera.png
+image-dark: /assets/images/camera-dark.png
 headerImage: true
 category: potpourri
 rel_path: sep20-may21
