--- a/_posts/potpourri/2020-09-02-snapshots-june-2021-mar-2022.html
+++ b/_posts/potpourri/2020-09-02-snapshots-june-2021-mar-2022.html
@@ -2,6 +2,7 @@
 title: "June 2021 - March 2022"
 layout: post
 image: /assets/images/camera.png
+image-dark: /assets/images/camera-dark.png
 headerImage: true
 category: potpourri
 rel_path: june21-mar22
