--- a/_posts/potpourri/2020-09-04-snapshots-june-2022-aug-2022-la.html
+++ b/_posts/potpourri/2020-09-04-snapshots-june-2022-aug-2022-la.html
@@ -2,6 +2,7 @@
 title: "June 2022 - August 2022: LA"
 layout: post 
 image: /assets/images/camera.png 
+image-dark: /assets/images/camera-dark.png
 headerImage: true 
 tag: 
 - Los Angeles
