--- a/_posts/potpourri/2020-09-06-snapshots-aug-2022-nov-2022.html
+++ b/_posts/potpourri/2020-09-06-snapshots-aug-2022-nov-2022.html
@@ -2,6 +2,7 @@
 title: "August 2022 - November 2022"
 layout: post 
 image: /assets/images/camera.png 
+image-dark: /assets/images/camera-dark.png
 headerImage: true
 category: potpourri 
 rel_path: aug22-nov22
