--- a/_posts/potpourri/2020-09-09-snapshots-march-2023-dc.html
+++ b/_posts/potpourri/2020-09-09-snapshots-march-2023-dc.html
@@ -2,6 +2,7 @@
 title: "March 2023: DC"
 layout: post 
 image: /assets/images/camera.png 
+image-dark: /assets/images/camera-dark.png
 headerImage: true 
 tag: 
   - DC
