--- a/_posts/potpourri/2020-09-01-snapshots-sept-2020-may-2021.html
+++ b/_posts/potpourri/2020-09-01-snapshots-sept-2020-may-2021.html
@@ -12,11 +12,11 @@ playlist: 62NBeQ24Yg32LOZQdyejBy?si=bcae210ed8d0410d
 images:
 - path: wndr-infinity-room.jpg
   alt: infinity mirror room with mirror ornaments
-  name: Let's Survive Forever
+  name: Let's Survive Forever, Yayoi Kusama 
   loc: WNDR Museum
   loc2: West Loop, Chicago
   date: April 18, 2021
-  desc: An Infinity Mirror Room, by Japanese artist Yayoi Kusama. We were alloted exactly one minute in the exhibit. Pretty trippy!
+  desc: exploring an infinity room in exactly one minute 
 - path: blue-leaves-west-loop.jpg
   alt: blue plant on the sidewalk
   name: Sidewalk Blues
@@ -27,19 +27,19 @@ images:
   name: RAMEN-SAN
   loc: River North, Chicago
   date: April 18, 2021
-  desc: My favorite ramen restaurant! Lunch special with salad, karaage chicken and tonkotsu ramen
+  desc: a favorite ramen joint of mine! karaage chicken and tonkotsu ramen
 - path: breakfast-haleys-bday.jpg
   alt: eggs benedict with canadian bacon and hashbrowns
   name: Hutch American Bistro
   loc: Lakeview, Chicago
   date: March 28, 2021
-  desc: Stumbled upon a cute bistro along N. Clark. Eggs benedict with hashbrowns
+  desc: stumbling across a cute bistro along N. Clark. eggs benedict and hasbrowns 
 - path: cuddle-bunny-gray-ghost.jpg
   alt: large gray bunny
   name: Cuddle Bunny
   loc: Lincoln Park, Chicago
   date: March 27, 2021
-  desc: The best stress relief = cuddling bunnies for an hour!
+  desc: best stress relief? 
 - path: gelato-on-river.jpg
   alt: chocolate and strawberry gelato on a bridge over the chi river
   name: Gelato on the River
@@ -50,55 +50,55 @@ images:
   name: St. Patrick's Day River
   loc: River North, Chicago
   date: March 13, 2021
-  desc: Every year, Chicago dyes its river green for St. Patrick's Day. Don't worry, tour guides claim it's safe
+  desc: tour guides claim green Chicago rivers are safe 
 - path: maggie-daley-skating.jpg
   alt: ice skating rink surrounded by skyscrapers
   name: Maggie Daley Park
   loc: Chicago Loop
   date: February 9, 2021
-  desc: Ice skating in the heart of downtown Chi
+  desc: ice skating in the heart of downtown Chi
 - path: shedd-aq-clownfish.jpg
   alt: two clownfish in the anenomes
   name: The Shedd Aquarium
   loc: Museum Campus, Chicago
   date: February 7, 2021
-  desc: Have you seen my son?!
+  desc: have you seen my son?!
 - path: grand-lux-picatta.jpg
   alt: lemon chicken picatta with capers and mushrooms
   name: Grand Lux Cafe
   loc: Michigan Avenue, Chicago
   date: February 2, 2021
-  desc: Afternoon meal on the Mag Mile. Lemon chicken piccata with fresh parmesan
+  desc: afternoon meal on the Mag Mile. lemon chicken piccata with fresh parmesan
 - path: macs-chipotle-wi-dells.jpg
   alt: skillet of mac with lime
   name: MACS
   loc: Wisconsin Dells, WI
   date: January 2, 2021
-  desc: The best (and only) mac restaurant I've visited. Chipotle mac with chicken and lime
+  desc: the best (and only) mac restaurant I've visited. chipotle mac with chicken and lime
 - path: mexico-playa-sunrise-sienna.jpg
   alt: sunrise with pink skies on the seaside
   name: Playa del Carmen 
   loc: Quintana Roo, Mexico
   date: December 19, 2020
-  desc: Daybreak on the ocean
+  desc: daybreak on the ocean
 - path: mexico-rock-hopping.jpg
   alt: me on a rock along the blue ocean
   name: Playa del Carmen 
   loc: Quintana Roo, Mexico
   date: December 19, 2020
-  desc: Rock-hopping on the Caribbean Shore
+  desc: rock-hopping on the Caribbean shore
 - path: lakefront-trail-from-shedd.jpg
   alt: trail by blue lake michigan
   name: Lakefront Trail 
   loc: Museum Campus, Chicago 
   date: November 8, 2020
-  desc: View of downtown Chi and Lake Michigan from the Shedd Aquarium
+  desc: view of downtown Chi and Lake Michigan from the Shedd Aquarium
 - path: madison-rainy-day-insta.jpg
   alt: streetview of a skyscraper
   name: West Madison Street
   loc: Chicago Loop 
   date: September 12, 2020 
-  desc: Walking along Madison Street on a rainy day
+  desc: walking along Madison St. on a rainy day
 ---
 <p class="text-center">
   Escaping to the Caribbean and moving to Chicago
