--- a/_posts/potpourri/2020-09-03-snapshots-mar-2022-toronto.html
+++ b/_posts/potpourri/2020-09-03-snapshots-mar-2022-toronto.html
@@ -18,49 +18,49 @@ images:
   name: PASAJ 
   loc: Toronto, Canada 
   date: March 14, 2022
-  desc: Istanbul-style brunch. Pancakes with sour cherry jam and tahini helva, zucchini fritters with pastirma and hollandaise, and matcha 
+  desc: istanbul-style brunch. pancakes with sour cherry jam and tahini helva, zucchini fritters with pastirma and hollandaise, and matcha 
 - path: broadview-hotel-room.jpeg
   alt: hotel room with burgandy curtains and pink floral wallpaper 
   name: Broadview Hotel 
   loc: Toronto, Canada 
   date: March 14, 2022
-  desc: This hotel had a cool record collection, which we danced to all night
+  desc: this hotel had a cool record collection, which we danced to all night
 - path: cn-tower-view-1.jpg
   alt: city lights at night from the top of the cn tower
   name: CN Tower 
   loc: Downtown Toronto, Canada 
   date: March 13, 2022
-  desc: Dazzling view of the city from a dizzying height of 553m
+  desc: dazzling view of the city from a dizzying height of 553m
 - path: cn-tower-view-2.jpg
   alt: city lights at night from the top of the cn tower
   name: CN Tower 
   loc: Downtown Toronto, Canada 
   date: March 13, 2022
-  desc: For Americans like me, that's 1,815ft
+  desc: (for Americans like me, that's 1,815ft)
 - path: yonge-dondas-square-toronto.jpeg
   alt: billboard screens and red streetcars at an intersection 
   name: Yonge-Dondas Square 
   loc: Downtown Toronto, Canada 
   date: March 13, 2022 
-  desc: Center square of the Yonge entertainment district 
+  desc: center square of the Yonge entertainment district 
 - path: broadview-hotel-noodle-dish.jpg
   alt: soba noodles with edamame  
   name: Broadview Hotel Rooftop Bar 
   loc: Toronto, Canada 
   date: March 12, 2022 
-  desc: Rooftop restaurant overlooking downtown Toronto. Soba noodles and a mojito! 
+  desc: rooftop restaurant overlooking downtown Toronto. soba noodles and a mojito! 
 - path: outside-casa-loma.jpg
   alt: gothic castle like mansion with canadian flag 
   name: Casa Loma 
   loc: Toronto, Canada 
   date: March 12, 2022 
-  desc: Mansion-turned-historic-museum. We explored 7 floors! 
+  desc: mansion-turned-historic-museum. we explored 7 floors...
 - path: chandelier-inside-casa-loma.jpeg
   alt: traditional dining room with a chandelier 
   name: Casa Loma 
   loc: Toronto, Canada 
   date: March 12, 2022 
-  desc: One of the 98 rooms!
+  desc: ...and 98 rooms! 
 ---
 
 
