--- a/_posts/potpourri/2020-09-04-snapshots-june-2022-aug-2022-la.html
+++ b/_posts/potpourri/2020-09-04-snapshots-june-2022-aug-2022-la.html
@@ -18,50 +18,50 @@ images:
   name: Sunny Blue 
   loc: Santa Monica, Los Angeles, CA 
   date: August 6, 2022 
-  desc: Cute omusubi shop on Main Street. Had miso beef and wafu curry with barley tea
+  desc: cute omusubi shop on Main Street. miso beef and wafu curry with barley tea
 - path: blue-venice-beach.jpg
   alt: bright blue tides and white sand 
   name: Venice Beach 
   loc: Venice, Los Angeles, CA 
   date: August 6, 2022 
-  desc: Walking along the boardwalk and dipping our feet in the ocean
+  desc: walking along the boardwalk and dipping our feet in the ocean
 - path: griffith-observatory-la-view.jpg
   alt: observatory view of downtown LA 
   name: Griffith Observatory 
   loc: Los Angeles, CA 
   date: July 31, 2022 
-  desc: View of LA from atop Mount Hollywood 
+  desc: view of LA from atop Mount Hollywood. yes, I forgot to take a picture of the sign
 - path: din-tai-fung-soup-and-greenbeans.jpg
   alt: basket of xiaolongbao dumplings and strinb eans 
   name: Din Tai Fung
   loc: Century City, Los Angeles, CA 
   date: July 27, 2022
-  desc: Apparently, reservations here are made weeks in advance! Above is their famous xiaolongbao with 18 folds
+  desc: apparently, reservations here are made weeks in advance! above is their famous xiaolongbao with 18 folds
 - path: box-of-mochinuts.jpg
   alt: strawberry, chocolate, and cinnamon sugar mochi donuts 
   name: Mochinut 
   loc: Century City, Los Angeles, CA 
   date: July 27, 2022
-  desc: Mochi + donuts = best dessert ever. Fun fact - we arrived near closing time, so we got two boxes for free! 
+  desc: mochi + donuts = best dessert ever. (fun fact - we got these boxes for free!) 
 - path: meet-fresh-grass-jelly.jpg
   alt: bowl of shiny grass jelly and taro 
   name: Meet Fresh 
   loc: Westwood, Los Angeles, CA 
   date: July 25, 2022 
-  desc: First time trying grass jelly shaved ice. Topped with taro and boba 
+  desc: first time trying grass jelly shaved ice, topped with taro and boba 
 - path: kai-ramen-la.jpg
   alt: tonkotsu ramen with egg and pork 
   name: Kai Ramen 
   loc: Santa Monica, CA 
   date: July 24, 2022 
-  desc: Stopped by a seriously good ramen shop after a long day at the beach. Spicy tonkotsu ramen with minced pork
+  desc: stopped by a seriously good ramen shop after a long day at the beach. spicy tonkotsu ramen with minced pork
 - path: grand-central-market-moon-rabbit.jpg
   alt: blue vendor stand 
   name: Moon Rabbit
   loc: Grand Central Market 
   loc2: Downtown Los Angeles, CA
   date: July 23, 2022 
-  desc: Asian tea and sandwiches 
+  desc: asian tea and sandwiches 
 - path: grand-central-market-moon-rabbit-sando.jpg
   alt: takeout box of katsu chicken sandwich 
   name: Moon Rabbit
@@ -75,7 +75,7 @@ images:
   loc: Grand Central Market 
   loc2: Downtown Los Angeles, CA 
   date: July 10, 2022 
-  desc: Mom-and-pop with homestyle Korean 
+  desc: mom-and-pop with homestyle Korean 
 - path: grand-central-market-shiku-chicken.jpg
   alt: takeout box of maekjuk chicken 
   name: Shiku
@@ -93,39 +93,39 @@ images:
   name: Getty View Park 
   loc: Los Angeles, CA 
   date: July 4, 2022 
-  desc: Star-gazing and watching fireworks illuminate LA 
+  desc: star-gazing and watching fireworks illuminate LA 
 - path: oakobing-bingsu.jpg
   alt: bowls of green tea and mango bingsu 
   name: Oakobing 
   loc: K-town, Los Angeles, CA 
   date: July 2, 2022 
-  desc: Bingsu dessert shop. Green tea shaved ice with mochis and matcha (left) and mango shaved ice with melon (right)
+  desc: bingsu dessert shop. green tea shaved ice with mochis and matcha (left) and mango shaved ice with melon (right)
 - path: kobawoo-house-mai-and-miho.jpg
   alt: bossam, kimchi, and yikgaejang
   name: Kobawoo House 
   loc: K-town, Los Angeles, CA 
   date: July 2, 2022
-  desc: Tried bossam and yukgaejang for the first time!
+  desc: tried bossam and yukgaejang for the first time!
 - path: outside-the-getty.jpg
   alt: white glass art museum 
   name: The Getty 
   loc: Los Angeles, CA 
   date: July 2, 2022
-  desc: Art museum on The Getty Campus
+  desc: art museum on The Getty Campus
 - path: getty-robert.jpg
   alt: suspended glass skeleton with blue neon currents
   name: Robert
   loc: The Getty 
   loc2: Los Angeles, CA 
   date: July 2, 2022
-  desc: My favorite display at the Getty! A levitating skeleton made of glass and pulsing neon light
+  desc: my favorite display at the Getty? a levitating skeleton made of glass and pulsing neon light
 - path: getty-campo-vaccino.jpg
   alt: campo vaccino painting in gold frame 
   name: Campo Vaccino
   loc: The Getty 
   loc2: Los Angeles, CA 
   date: July 2, 2022
-  desc: Hazy landscape of modern Rome 
+  desc: hazy landscape of modern Rome 
 - path: santa-monica-pier-ferris-wheel.jpg
   alt: night at the beach with a ferris wheel 
   name: Santa Monica Pier 
@@ -136,14 +136,14 @@ images:
   name: The Last Bookstore 
   loc: Downtown Los Angeles, CA 
   date: June 25, 2022
-  desc: Turns out, this place has a LOT of books. Browse the stacks, check out the book tunnel, and buy local art! 
+  desc: turns out, this place has a LOT of books. browse the stacks, check out the book tunnel, and buy local art! 
 - path: grand-central-market-lemon-icecream.jpg
   alt: cup of ice cream 
   name: McConnell's Fine Ice Creams
   loc: Grand Central Market 
   loc2: Downtown Los Angeles, CA 
   date: June 25, 2022
-  desc: The best ice cream I've had in my life. Seriously. Dish of lemon and marionberries 
+  desc: the best ice cream I've had in my life. seriously. dish of lemon and marionberries 
 - path: westwood-village-palm-trees.jpg
   alt: road intersection with palm trees and string lights 
   name: Westwood Village 
