--- a/_posts/potpourri/2020-09-06-snapshots-aug-2022-nov-2022.html
+++ b/_posts/potpourri/2020-09-06-snapshots-aug-2022-nov-2022.html
@@ -15,13 +15,13 @@ images:
   name: La Crêperie 
   loc: Lincoln Park 
   date: November 19, 2022 
-  desc: My favorite French restaurant in Chi. My classic order? A croque madame! 
+  desc: my favorite French restaurant in Chi, where I always order the croque madame 
 - path: hot-choco-machine-dining.jpg 
   alt: skillet of pork and eggs 
   name: Machine Engineered Dining and Drink 
   loc: Wicker Park 
   date: November 5, 2022
-  desc: Brunch after a race! Glazed pork with kimchi and fried eggs 
+  desc: brunch after a race! glazed pork with kimchi and fried eggs 
 - path: hot-choco-bear-art.jpeg 
   alt: street art of yellow bear eating pizza
   name: Pizza Bear, I proclaim 
@@ -48,47 +48,47 @@ images:
   loc: Urban Space 
   loc2: Chicago Loop 
   date: October 21, 2022
-  desc: Food in the Theater District! Drunken noodles and maybe the best thai iced tea I've ever had 
+  desc: food in the Theater District! drunken noodles and maybe the best thai iced tea I've ever had 
 - path: iit-autumn-22.jpg 
   alt: red and gold leaves 
   name: Illinois Tech 
   loc: Bronzeville, Chicago 
   date: October 14, 2022
-  desc: Tea-sipping autumn days 
+  desc: tea-sipping autumn days 
 - path: lakefront-trail-oct-22.jpg 
   alt: downtown chi from lakefront running trail 
   name: Lakefront Trail 
   loc: Museum Campus, Chicago 
   date: October 9, 2022 
-  desc: Training for a race may be unpleasant, but the views along the lake aren't 
+  desc: training for a race may be unpleasant, but the views along the lake aren't 
 - path: tsaocaa-shaved-ice.jpeg 
   alt: korean shaved ice with strawberries and peaches 
   name: Tsaocaa 
   loc: Chinatown, Chicago 
   date: September 28, 2022
-  desc: Eating my weight in dessert. Snowflake ice with strawberries and white peaches 
+  desc: eating my weight in dessert. snowflake ice with strawberries and white peaches 
 - path: indiana-sand-dunes.jpeg 
   alt: Kaylee on a giant red lifeguard chair 
   name: Indiana Sand Dunes 
   loc: Porter, IN 
   date: September 18, 2022 
-  desc: We had a picnic, fell down sand mountains, and did cartwheels in Lake Michigan
+  desc: we had a picnic, fell down sand mountains, and did cartwheels in Lake Michigan
 - path: navy-pier-chi-downtown-gray.jpg 
   alt: downtown chi at dusk over lake michigan 
   name: Navy Pier 
   loc: Near North Side, Chicago 
   date: September 10, 2022
-  desc: Surprisingly, it's been 4 years since I last visited the most touristy place in Chi 
+  desc: surprisingly, it's been 4 years since I last visited the most touristy place in Chi 
 - path: ping-tom-park-picnic.jpg 
   alt: chi river at dusk at a park 
   name: Ping Tom Memorial Park 
   loc: Chinatown, Chicago 
   date: August 27, 2022 
-  desc: Picnic in the park 
+  desc: picnic in the park 
 - path: chi-north-view-of-madison-sent-to-amit.jpg 
   alt: chi glass skyscrapers reflecting the river 
   name: North View from Madison Street
   loc: Chicago Loop 
   date: August 27, 2022 
-  desc: Back to crystal clarity 
+  desc: back to crystal clarity 
 --- 
