--- a/_posts/potpourri/2020-09-07-snapshots-dec-2022-nyc.html
+++ b/_posts/potpourri/2020-09-07-snapshots-dec-2022-nyc.html
@@ -19,37 +19,37 @@ images:
   loc: Gershwin Theatre 
   loc2: Theater District, Manhattan, NYC 
   date: December 19, 2022 
-  desc: My first Broadway show! Long awaited, much loved, and the best thing I did in New York. 
+  desc: my first Broadway show! long awaited, much loved, and the best thing I did in New York
 - path: wagamama-ramen.jpg 
   alt: pork ramen with egg 
   name: wagamama 
   loc: Midtown Manhattan, NYC 
   date: December 19, 2022 
-  desc: Szechuan pork ramen, aka my savior from cold NY streets
+  desc: szechuan pork ramen, aka my savior from cold NY streets
 - path: times-square-night.jpg 
   alt: times square at night 
   name: Times Square 
   loc: Midtown Manhattan, NYC
   date: December 18, 2022 
-  desc: Never before have billboard lights felt so euphoric 
+  desc: never before have billboard lights felt so euphoric 
 - path: truffle-gnocchi-joannes.jpg 
   alt: dish of gnocchi pasta 
   name: Joanne Trattoria 
   loc: Upper West Side, Manhattan, NYC 
   date: December 18, 2022
-  desc: Apparently, never try going to dinner in NY without a reservation. After stumbling around for an hour, we found this cute hole-in-the-wall with live singing! Gnocchi with white truffle sauce 
+  desc: never try going to dinner in NY without a reservation. after stumbling around for an hour, we found this cute hole-in-the-wall with live singing! gnocchi with white truffle sauce 
 - path: escalators-fifth-ave.jpg 
   alt: mall escalators with shiny rainbow glass 
   name: Saks Fifth Avenue 
   loc: Midtown East, Manhattan, NYC 
   date: December 18, 2022 
-  desc: Where handbags are $1200, but rainbow escalators are free 
+  desc: where handbags are $1200, but rainbow escalators are free 
 - path: times-square-day.jpg 
   alt: times square with flashing billboards 
   name: Times Square
   loc: Midtown Manhattan, NYC
   date: December 18, 2022 
-  desc: Sans the ball drop 
+  desc: sans the ball drop 
 - path: times-square-world-cup.jpg 
   alt: rally in times square 
   name: Times Square, World Cup Edition 
@@ -61,19 +61,19 @@ images:
   name: Empire State Building 
   loc: Midtown Manhattan, NYC 
   date: December 17, 2022 
-  desc: Where I defied gravity 
+  desc: where I defied gravity 
 - path: empire-state-night-view.jpg 
   alt: nyc skyline at night 
   name: Empire State Building 
   loc: Midtown Manhattan, NYC 
   date: December 17, 2022 
-  desc: (In New York, those blinding lights and concrete jungles)
+  desc: (in New York, those blinding lights and concrete jungles)
 - path: local92-nyc.jpg 
   alt: cast iron skillet of shakshuka and bread 
   name: Local 92 NY 
   loc: East Village, Manhattan, NYC 
   date: December 17, 2022 
-  desc: Cute Middle Eastern with cool lighting! Always the egg fanatic, I had shakshuka
+  desc: cute Middle Eastern food with cool lighting! Always the egg fanatic, I had shakshuka
 - path: little-italy.jpg 
   alt: string lights and outside restaurants in the street 
   name: Little Italy 
@@ -89,25 +89,25 @@ images:
   name: The Strand Bookstore 
   loc: Greenwich Village, Manhattan, NYC 
   date: December 17, 2022 
-  desc: Where I bought a copy of Gödel, Escher, Bach! And had to stop myself from buying a billion stickers
+  desc: where I bought a copy of Gödel, Escher, Bach! and had to stop myself from buying a billion stickers
 - path: washington-square-park.jpg
   alt: me in front of the washington park arch 
   name: Washington Square Park 
   loc: Greenwich Village, Manhattan, NYC 
   date: December 17, 2022 
-  desc: Where I saw a million trained pigeons and impressive hula-hoop routines... separately, of course 
+  desc: where I saw a million trained pigeons and impressive hula-hoop routines... separately, of course 
 - path: brooklyn-bagels.jpg 
   alt: bagel with blueberry cream cheese 
   name: Brooklyn Bagel and Coffee Co
   loc: Greenwich Village, Manhattan, NYC 
   date: December 17, 2022 
-  desc: Because you can't visit NYC without finding a bagel joint. Pictured - everything bagel with blueberry cream cheese. Not pictured - avocado and gouda bagel sandwich
+  desc: because you can't visit NYC without finding a bagel joint. everything bagel with blueberry cream cheese
 - path: the-met-glass-overview.jpg 
   alt: indoor balcony with sculptures and a cafe 
   name: The Met 
   loc: Upper East Side, Manhattan, NYC 
   date: December 16, 2022 
-  desc: Giving ultimate art vibes
+  desc: giving ultimate art vibes
 - path: triumph-of-aemilius-met.jpg 
   alt: triumph of aemilius paulus in a golden frame 
   name: The Triumph of Aemilius Paulus 
@@ -132,25 +132,24 @@ images:
   loc: The Met 
   loc2: Upper East Side, Mahhattan, NYC 
   date: December 16, 2022 
-  desc: Throw a coin and make a wish, but only if it's denarii 
+  desc: throw a coin and make a wish, but only if it's denarii 
 - path: origami-tree-nat-history.jpg 
   alt: christmas tree with origami as ornaments 
   name: Museum of Natural History 
   loc: Upper West Side, Manhattan, NYC 
   date: December 16, 2022 
-  desc: For a joyous Christmas tree, handmake cute origami animals! 
 - path: glass-space-nat-history.jpeg
   alt: floating planets in glass room 
   name: Museum of Natural History 
   loc: Upper West Side, Manhattan, NYC 
   date: December 16, 2022 
-  desc: Planets not to scale 
+  desc: planets not to scale 
 - path: wall-of-skeletons-nat-history.jpg
   alt: wall of animal skeletons 
   name: Museum of Natural History 
   loc: Upper West Side, Manhattan, NYC 
   date: December 16, 2022 
-  desc: Totally not spooky
+  desc: totally not spooky
 - path: dino-skelly-nat-history.jpg
   alt: t-rex skeleton 
   name: Museum of Natural History 
@@ -162,19 +161,19 @@ images:
   name: Katz' Delicatessen
   loc: Lower East Side, Manhattan, NYC 
   date: December 15, 2022
-  desc: I'll have what she's having - melt-in-your-mouth pastrami sandwiches the size of your head! 
+  desc: I'll have what she's having (melt-in-your-mouth pastrami sandwiches the size of your head) 
 - path: rainy-times-square.jpg 
   alt: times square on dreary rainy day 
   name: Times Square 
   loc: Midtown Manhattan, NYC 
   date: December 15, 2022
-  desc: Greeted by a sea of umbrellas and flashing billboards 
+  desc: greeted by a sea of umbrellas and flashing billboards 
 - path: ord-rainbow-lights.jpg
   alt: airport hall with neon lights on the ceiling
   name: O'Hare Airport
   loc: Chicago, IL
   date: December 15, 2022
-  desc: Technically not NYC, but cool lights nevertheless 
+  desc: technically not NYC, but cool lights nevertheless 
 --- 
 
 
