--- a/_posts/potpourri/2020-09-08-snapshots-jan-2023-mar-2023.html
+++ b/_posts/potpourri/2020-09-08-snapshots-jan-2023-mar-2023.html
@@ -15,7 +15,7 @@ images:
   name: Happy Lamb Hot Pot 
   loc: Chinatown, Chicago 
   date: March 11, 2023 
-  desc: I tried hot pot for the first time in 2021, and I don't think any other hot pot restaurant can ever compare. An IIT favorite 
+  desc: I tried hot pot for the first time in 2021, and I don't think any other hot pot restaurant can ever compare. an IIT favorite 
 - path: wndr-box-lights.png 
   alt: mirror cubes with flashing blue lights 
   name: WNDR Museum 
@@ -27,37 +27,37 @@ images:
   name: Sushi Dokku 
   loc: Fulton Market, Chicago 
   date: February 25, 2023 
-  desc: Really good salmon sushi (no clue how it was so good) 
+  desc: really good salmon sushi (no clue how it was so good) 
 - path: lucy-bekfast-burg.jpeg 
   alt: burger with sweet potato fries 
   name: Lucy's #7 
   loc: South Beloit, IL 
   date: February 24, 2023 
-  desc: Basically, the best burger joint I've ever had the pleasure of eating in (and working in)! A fan-favorite of my friends and family, Lucy's offers Burgers of the Months (BOMs). Breakfast BOM, sweet fries, and amazing chipotle aioli
+  desc: basically, the best burger joint I've ever had the pleasure of eating in (and working in)! a fan-favorite of my friends and family. breakfast BOM, sweet fries, and heavenly chipotle aioli
 - path: sweet-bean-thai-tea.jpg 
   alt: tray of bao buns and thai tea 
   name: Sweet Bean 
   loc: South Loop, CHicago 
   date: February 23, 2023 
-  desc: The cutest Taiwanese bakery! Try coffee, tea, and a million different pastries. Tomato-bacon puffs, sesami-mochi bun, and Thai iced tea
+  desc: the cutest taiwanese bakery! try coffee, tea, and a million different pastries. tomato-bacon puffs, sesami-mochi bun, and thai iced tea
 - path: il-culaccino-calamari.jpg
   alt: plate of fried calamari 
   name: Il Culaccino 
   loc: South Loop, Chicago 
   date: February 2, 2023
-  desc: Aka, perhaps the best calamari I've ever had
+  desc: aka, perhaps the best calamari I've ever had
 - path: il-culaccino-spicy-pesto.jpg 
   alt: pesto pasta 
   name: Il Culaccino 
   loc: South Loop, Chicago 
   date: February 2, 2023
-  desc: Mouth-watering spicy pesto pasta 
+  desc: mouth-watering spicy pesto pasta 
 - path: eleven-deli-corned-beef.jpg 
   alt: plate of corned beef sandwich with a flag in it 
   name: Eleven City Diner 
   loc: South Loop, Chicago 
   date: January 29, 2023 
-  desc: Corned beef, matzo ball soup, and my first egg cream shake. My friend described it as "fancy chocolate milk", which is valid
+  desc: corned beef, matzo ball soup, and my first egg cream shake. my friend described it as "fancy chocolate milk", which is valid
 - path: kasumi-sushi-unl.jpg 
   alt: fried sushi rolls 
   name: Kasumi Sushi 
@@ -75,19 +75,19 @@ images:
   loc: Hynes Convention Center 
   loc2: Back Bay, Boston, MA 
   date: January 4, 2023 
-  desc: Don't talk to me unless you've personally built a Menger sponge out of 32,000 Lego bricks
+  desc: don't talk to me unless you've personally built a Menger sponge out of 32,000 Lego bricks
 - path: mariott-boston-view.jpg 
   alt: overcast view of boston streets 
   name: Marriott Copley 
   loc: Back Bay, Boston, MA 
   date: January 4, 2023 
-  desc: Cloudy with a chance of math talks 
+  desc: cloudy with a chance of math talks 
 - path: science-museum-mirror.jpg 
   alt: my friends standing in front of checkerboard of mirror squares 
   name: Museum of Science 
   loc: Boston, MA 
   date: January 3, 2023 
-  desc: Let's play "Where's Kaylee?" 
+  desc: let's play "Where's Kaylee?" 
 - path: pink-puffs.jpg 
   alt: pink fluffy flowers on a tree 
   name: Museum of Science 
