--- a/_posts/potpourri/2020-09-09-snapshots-march-2023-dc.html
+++ b/_posts/potpourri/2020-09-09-snapshots-march-2023-dc.html
@@ -18,7 +18,7 @@ images:
   name: Library of Congress 
   loc: Capitol Hill
   date: March 18, 2023 
-  desc: Craning my neck to gaze at the sunlight 
+  desc: craning my neck to gaze at the sunlight 
 - path: library-congress-painted-ceilings.jpg 
   alt: wide painted ceilings in library of congress 
   name: Library of Congress 
@@ -34,13 +34,13 @@ images:
   name: Unconventional Diner 
   loc: Mt. Vernon Square, DC 
   date: March 17, 2023 
-  desc: Dare I say, the most amazing meal I've ever had? This restaurant serves dishes combining typical homestyle with an elegant twist. We had chicken parm "florentine" with gruyère, "french dip" pappardelle with flank and horseradish, and truffle mac! Best leftovers ever. 
+  desc: dare I say, the most amazing meal I've ever had? serving dishes combining typical homestyle with an elegant twist. we had chicken parm "florentine" with gruyère, "french dip" pappardelle with flank and horseradish, and truffle mac. best leftovers ever
 - path: air-and-space-planet-model.jpg 
   alt: solar system glass model 
   name: National Air and Space Museum 
   loc: National Mall, DC 
   date: March 17, 2023 
-  desc: How does Earth organize birthday parties? They PLANET! (sorry, that joke, much like Orion's belt, was lame. 3 stars)
+  desc: how does Earth organize birthday parties? they PLANET! (sorry, that joke, much like Orion's belt, was lame. 3 stars)
 - path: air-and-space-astronaut.jpg 
   alt: neil armstrong suit 
   name: National Air and Space Museum 
@@ -57,19 +57,19 @@ images:
   name: National Museum of Natural History 
   loc: National Mall, DC 
   date: March 17, 2023 
-  desc: Resisting the urge to eat  
+  desc: resisting the urge to eat  
 - path: natural-history-quartz.jpg 
   alt: spiky clear and white quartz rock 
   name: National Museum of Natural History 
   loc: National Mall, DC 
   date: March 17, 2023 
-  desc: So this is what Minecraft was talking about 
+  desc: so this is what Minecraft was talking about 
 - path: natural-history-fish-tank.jpg 
   alt: blue fish tank 
   name: National Museum of Natural History 
   loc: National Mall, DC 
   date: March 17, 2023 
-  desc: Wherever I go, I am constantly entranced by the fishies 
+  desc: wherever I go, I am constantly entranced by the fishies 
 - path: nat-museum-of-art-niagra.jpg 
   alt: painting of niagra falls in a golden frame 
   name: Niagra 
@@ -86,13 +86,12 @@ images:
   name: The Lincoln Memorial 
   loc: National Mall, DC 
   date: March 16, 2023 
-  desc: A tad more impressive than a penny 
+  desc: a tad more impressive than a penny 
 - path: lincoln-statue.jpg 
   alt: Lincoln memorial statue  
   name: The Lincoln Memorial 
   loc: National Mall, DC 
   date: March 16, 2023 
-  desc: They do say Lincoln was the tallest president... 
 - path: cherry-blossom-wharf.jpg 
   alt: me sitting on a dock with fake cherry blossom lights 
   name: Wharf Street 
@@ -104,7 +103,7 @@ images:
   name: Kaliwa 
   loc: The Wharf, DC 
   date: March 16, 2023 
-  desc: A place proclaiming cuisine from Thailand, Korea, and the Phillipines. I had Thai panang curry! 
+  desc: proclaiming cuisine from Thailand, Korea, and the Phillipines. I had Thai panang curry! 
 - path: wharf-fountain.jpg 
   alt: water fountain with glass building 
   name: Wharf Street 
@@ -115,17 +114,17 @@ images:
   name: bartaco 
   loc: The Wharf, DC 
   date: March 16, 2023 
-  desc: Bright, energetic, and completely swankified bar right along the waterfront 
+  desc: bright, energetic, and completely swankified bar right along the waterfront 
 - path: bar-taco.jpg 
   alt: four small tacos on a silver tray 
   name: bartaco 
   loc: The Wharf, DC 
   date: March 16, 2023 
-  desc: The best tacos I've had in my life. Roasted duck with tamarind glaze, sesame ribeye, pork belly in arbol chili sauce, and chorizo with chimichurri. And yes, looking up the menu for the descriptions made my mouth water. 
+  desc: the best tacos I've had in my life. roasted duck with tamarind glaze, sesame ribeye, pork belly in arbol chili sauce, and chorizo with chimichurri. and yes, looking up the menu for the descriptions made my mouth water. 
 - path: tunnel.jpg
   alt: train rail under large tunnel 
   loc: Southwest Federal Center, DC 
-  name: Metro at L'Enfant Plaza 
+  name: metro at L'Enfant Plaza 
   date: March 16, 2023
 --- 
 
