--- a/_posts/potpourri/2020-09-10-snapshots-mar2023-may2023.html
+++ b/_posts/potpourri/2020-09-10-snapshots-mar2023-may2023.html
@@ -19,19 +19,19 @@ images:
   name: Toothsome Chocolate Emporium 
   loc: Universal Studios, Orlando, FL 
   date: May 21, 2023 
-  desc: Feeling a little wonky 
+  desc: feeling a little wonky 
 - path: hot-taco-street-taquiera.jpg
   alt: three street tacos 
   name: Hot Taco Street Taquiera 
   loc: Orlando, FL 
   date: May 20, 2023 
-  desc: Chicken, pork belly, and carne asada 
+  desc: chicken, pork belly, and carne asada 
 - path: sushi-plus.png 
   alt: sushi on rotary belt 
   name: Sushi + | Rotary Sushi 
   loc: Chinatown, Chicago
   date: May 18, 2023
-  desc: First rotary sushi bar, and I could not stop grabbing 
+  desc: first rotary sushi bar, and I could not stop grabbing 
 - path: candy-cloud.jpg 
   alt: two jars of strawberry drinks 
   name: Candy Cloud 
@@ -55,7 +55,7 @@ images:
   name: Nia's Boba
   loc: Bridgeport, Chicago 
   date: May 5, 2023
-  desc: Falling in love...
+  desc: falling in love...
 - path: nias-boba.jpg
   alt: pink boba 
   name: Nia's Boba
@@ -67,17 +67,17 @@ images:
   name: Margie's Candies
   loc: Wicker Park, Chicago 
   date: April 22, 2023
-  desc: First time at the Chicago legend. No, I did not try the 25 scoop sundae... but I did have mango dragonfruit ice cream! 
+  desc: first time at the Chicago legend. no, I did not try the 25 scoop sundae... but I did have mango dragonfruit ice cream! 
 - path: francos.jpg
   alt: pasta cream sauce 
   name: Franco's Ristorante
   loc: Bridgeport, Chicago
   date: April 16, 2023
-  desc: Dying of hunger. Fettuccini alla Franco
+  desc: dying of hunger. fettuccini alla Franco
 - path: trukt-taco.jpg
   alt: three street tacos with lime 
   name: truk't
   loc: Beloit, WI
   date: April 8, 2023 
-  desc: Second best tacos in the world! My holy trinity - Korean BBQ, short rib, and chicken tinga 
+  desc: second best tacos in the world! my holy trinity - Korean BBQ, short rib, and chicken tinga 
 ---
