--- a/_posts/potpourri/2020-09-02-snapshots-june-2021-mar-2022.html
+++ b/_posts/potpourri/2020-09-02-snapshots-june-2021-mar-2022.html
@@ -20,13 +20,13 @@ images:
   name: Furious Spoon
   loc: Lakeview, Chicago 
   date: February 5, 2022 
-  desc: Hip hop ramen stop. Tonkotsu ramen with chashu
+  desc: hip hop ramen stop. tonkotsu ramen with chashu
 - path: bites-asian-kitchen-duck-yakisoba.jpg 
   alt: noodle dish with purple flower 
   name: BITES Asian Kitchen 
   loc: Lakeview, Chicago 
   date: January 29, 2022
-  desc: Roast duck and yakisoba noodles, topped with bonito flakes and sesame 
+  desc: roast duck and yakisoba noodles, topped with bonito flakes and sesame 
 - path: christmas-tree-science-industry.jpeg 
   alt: colorful christmas tree 
   name: Museum of Science and Industry 
@@ -38,37 +38,36 @@ images:
   name: Aba 
   loc: Fulton Market, Chicago 
   date: January 2, 2022
-  desc: Dining on mezze on the rooftop patio. Tamarind-brased short ribs with barberries 
+  desc: dining on mezze on the rooftop patio. tamarind-brased short ribs with barberries 
 - path: gaylord-opryland-resort-tn.jpg
   alt: indoor garden with hanging lights
   name: Gaylord Opryland Resort
   loc: Nashville, TN
   date: December 20, 2021
-  desc: The duality of December = festive lights + country music
+  desc: the duality of December = festive lights + country music
 - path: christmas-tree-millienium-park.jpg
   alt: colorful christmas tree at night 
   name: Christmas in Millennium Park 
   loc: Chicago Loop
   date: December 12, 2021
-  desc: Downtown Chi gets festive! 
 - path: il-culaccino-vodka-pasta.jpg
   alt: vodka pasta topped with ricotta
   name: Il Culaccino
   loc: South Loop, Chicago
   date: November 3, 2021
-  desc: My favorite Italian restaurant in Chi. Pipette alla vodka with ricotta
+  desc: my favorite Italian restaurant in Chi. pipette alla vodka with ricotta
 - path: autumn-at-macalester.jpg
   alt: orange and gold autumn trees 
   name: Macalester College
   loc: St. Paul, MN
   date: October 30, 2021
-  desc: Autumn daze 
+  desc: autumn daze 
 - path: garfield-conservatory-koi-fish.jpg
   alt: koi fish swimming in a pond
   name: Garfield Conservatory
   loc: Garfield Park, Chicago
   date: October 22, 2021
-  desc: This botanical conservatory has some amazing gardens, plant houses, and lily ponds with koi fish!
+  desc: botanical conservatory with care-free koi 
 - path: shedd-aq-blue-fish.jpg
   alt: blue and orange striped fish 
   name: The Shedd Aquarium
@@ -79,19 +78,19 @@ images:
   name: Grand Lux Cafe 
   loc: Michigan Avenue, Chicago 
   date: August 24, 2021
-  desc: That morning, I woke up from a dream where I ate beignets. Had to fulfill fate 
+  desc: that morning, I woke up from a dream where I ate beignets. had to fulfill fate 
 - path: arch-st-louis.jpg 
   alt: arch in st louis with eerie storm clouds 
   name: Gateway Arch 
   loc: St. Louis, MO
   date: July 11, 2021
-  desc: Right before torrential downpour
+  desc: right before torrential downpour
 - path: old-settlers-day-ferris.jpg
   alt: view of a carnival on top of a ferris wheel 
   name: Old Settler's Day 
   loc: Rockton, IL
   date: June 17, 2021
-  desc: On top of the ferris wheel, at my hometown's annual festival 
+  desc: on top of the ferris wheel, at my hometown's annual festival 
 - path: beach-in-florida-with-haley.jpg
   alt: sunset on the ocean 
   name: Gulfport Beach 
