--- a/_posts/potpourri/2020-09-05-snapshots-aug-2022-sf.html
+++ b/_posts/potpourri/2020-09-05-snapshots-aug-2022-sf.html
@@ -18,13 +18,13 @@ images:
   name: The Painted Ladies 
   loc: San Francisco, CA 
   date: August 14, 2022 
-  desc: One thing I didn't expect when I visited SF was how colorful their houses were - bright greens, pastel pinks, and baby blues 
+  desc: one thing I didn't expect when I visited SF was how colorful their houses were - bright greens, pastel pinks, and baby blues 
 - path: ube-latte-boba-guys.jpg 
   alt: purple and white ube boba latte 
   name: Boba Guys 
   loc: Japantown, San Francisco, CA 
   date: August 14, 2022
-  desc: According to my favorite SF acquaintances, this place is VERY popular in the Bay Area. I can see why - this ube latte is in my top 5 boba drinks! 
+  desc: according to my favorite SF acquaintances, this place is VERY popular in the Bay Area. I can see why. ube latte is divine
 - path: pier-39-water.jpg 
   alt: blue ocean and small dock with mountains in the background 
   name: Pier 39
@@ -36,25 +36,25 @@ images:
   name: Trinity Place
   loc: Mid-Market, San Francisco, CA 
   date: August 14, 2022
-  desc: Trippy looking sculptures and other such art 
+  desc: trippy looking sculptures and other such art 
 - path: union-square.jpg
   alt: empty street with string lights and paper latterns strung 
   name: Union Square
   loc: San Francisco, CA 
   date: August 14, 2022
-  desc: Wandering the streets in SF with nothing but pluots and a good playlist 
+  desc: wandering the streets in SF with nothing but pluots and a good playlist 
 - path: golden-gate-park.jpg
   alt: lake and trees at a park 
   name: Golden Gate Park 
   loc: San Francisco, CA 
   date: August 13, 2022
-  desc: Nice for reading on benches 
+  desc: nice for reading on benches 
 - path: ppq-pho.jpg 
   alt: bowl of steak pho with bean sprouts 
   name: Pho Phu Quoc 
   loc: San Francisco, CA 
   date: August 13, 2022
-  desc: Vietnamese on Irving St. Flank steak pho, much needed after a long day of traveling
+  desc: vietnamese on Irving St. flank steak pho, much needed after a long day of traveling
 --- 
 
 <link rel="stylesheet" type="text/css" href="/gallery.css"/>
