--- a/_posts/potpourri/2020-09-01-snapshots-sept-2020-may-2021.html
+++ b/_posts/potpourri/2020-09-01-snapshots-sept-2020-may-2021.html
@@ -101,7 +101,7 @@ images:
   desc: walking along Madison St. on a rainy day
 ---
 <p class="text-center">
-  Escaping to the Caribbean and moving to Chicago
+  Escaping to the Caribbean and moving to Chicago...
 </p>
 
 <br>
