--- a/_posts/potpourri/2020-09-02-snapshots-june-2021-mar-2022.html
+++ b/_posts/potpourri/2020-09-02-snapshots-june-2021-mar-2022.html
@@ -97,3 +97,6 @@ images:
   loc: St. Petersburg, FL 
   date: June 11, 2021
 --- 
+<p class="text-center">
+  Basking in Chi festivities, along with mini-trips to Tennessee, Missouri, Minnesota, and Florida. 
+</p>
