--- a/_posts/potpourri/2020-09-06-snapshots-aug-2022-nov-2022.html
+++ b/_posts/potpourri/2020-09-06-snapshots-aug-2022-nov-2022.html
@@ -34,7 +34,7 @@ images:
   date: October 22, 2022
 - path: miro-bird-lady-sculpture.jpg 
   alt: concrete and steel sculpture of bird lady 
-  name: Miró's Chicago 
+  name: Miró's Chicago
   loc: Chicago Loop 
   date: October 21, 2022
 - path: chicago-picasso-sculpture.jpg 
@@ -92,3 +92,8 @@ images:
   date: August 27, 2022 
   desc: back to crystal clarity 
 --- 
+
+<p class="text-center">
+  Returning from the West Coast just in time for autumn in my city. 
+</p>
+<br>
