--- a/_posts/potpourri/2020-09-08-snapshots-jan-2023-mar-2023.html
+++ b/_posts/potpourri/2020-09-08-snapshots-jan-2023-mar-2023.html
@@ -99,3 +99,7 @@ images:
   loc: Fulton Market, Chicago 
   date: January 2, 2023 
 --- 
+<p class="text-center">
+  Foodies and attending my first math conference in rainy Boston.
+</p>
+<br>
