--- a/_posts/potpourri/2020-09-10-snapshots-mar2023-may2023.html
+++ b/_posts/potpourri/2020-09-10-snapshots-mar2023-may2023.html
@@ -81,3 +81,7 @@ images:
   date: April 8, 2023 
   desc: second best tacos in the world! my holy trinity - Korean BBQ, short rib, and chicken tinga 
 ---
+<p class="text-center">
+  Bouncing around between cat cafes, corfields, and tulip festivals.
+</p>
+<br>
