adding artist names

--- a/_posts/potpourri/2020-09-04-snapshots-june-2022-aug-2022-la.html
+++ b/_posts/potpourri/2020-09-04-snapshots-june-2022-aug-2022-la.html
@@ -114,14 +114,14 @@ images:
   desc: art museum on The Getty Campus
 - path: getty-robert.jpg
   alt: suspended glass skeleton with blue neon currents
-  name: Robert
+  name: Robert, Tavares Strachan 
   loc: The Getty 
   loc2: Los Angeles, CA 
   date: July 2, 2022
   desc: my favorite display at the Getty? a levitating skeleton made of glass and pulsing neon light
 - path: getty-campo-vaccino.jpg
   alt: campo vaccino painting in gold frame 
-  name: Campo Vaccino
+  name: Campo Vaccino, J. M. W. Turner
   loc: The Getty 
   loc2: Los Angeles, CA 
   date: July 2, 2022
