--- a/_posts/potpourri/2020-09-07-snapshots-dec-2022-nyc.html
+++ b/_posts/potpourri/2020-09-07-snapshots-dec-2022-nyc.html
@@ -110,7 +110,7 @@ images:
   desc: giving ultimate art vibes
 - path: triumph-of-aemilius-met.jpg 
   alt: triumph of aemilius paulus in a golden frame 
-  name: The Triumph of Aemilius Paulus 
+  name: The Triumph of Aemilius Paulus, Carle Venet
   loc: The Met 
   loc2: Upper East Side, Mahhattan, NYC 
   date: December 16, 2022 
