--- a/_posts/potpourri/2020-09-09-snapshots-march-2023-dc.html
+++ b/_posts/potpourri/2020-09-09-snapshots-march-2023-dc.html
@@ -72,7 +72,7 @@ images:
   desc: wherever I go, I am constantly entranced by the fishies 
 - path: nat-museum-of-art-niagra.jpg 
   alt: painting of niagra falls in a golden frame 
-  name: Niagra 
+  name: Niagra, Frederic Edwin Church
   loc: The National Gallery of Art 
   loc2: National Mall, DC 
   date: March 17, 2023 
@@ -124,7 +124,7 @@ images:
 - path: tunnel.jpg
   alt: train rail under large tunnel 
   loc: Southwest Federal Center, DC 
-  name: metro at L'Enfant Plaza 
+  name: Metro at L'Enfant Plaza 
   date: March 16, 2023
 --- 
 
