adding style to art titles

--- a/_posts/potpourri/2020-09-01-snapshots-sept-2020-may-2021.html
+++ b/_posts/potpourri/2020-09-01-snapshots-sept-2020-may-2021.html
@@ -12,7 +12,8 @@ playlist: 62NBeQ24Yg32LOZQdyejBy?si=bcae210ed8d0410d
 images:
 - path: wndr-infinity-room.jpg
   alt: infinity mirror room with mirror ornaments
-  name: Let's Survive Forever, Yayoi Kusama 
+  title: Let's Survive Forever
+  name: Yayoi Kusama 
   loc: WNDR Museum
   loc2: West Loop, Chicago
   date: April 18, 2021
