--- a/_posts/potpourri/2020-09-06-snapshots-aug-2022-nov-2022.html
+++ b/_posts/potpourri/2020-09-06-snapshots-aug-2022-nov-2022.html
@@ -24,7 +24,8 @@ images:
   desc: brunch after a race! glazed pork with kimchi and fried eggs 
 - path: hot-choco-bear-art.jpeg 
   alt: street art of yellow bear eating pizza
-  name: Pizza Bear, I proclaim 
+  title: The Bear Champ
+  name: JC Rivera
   loc: Wicker Park 
   date: November 5, 2022
 - path: chi-river-on-bridge-10-22.jpg 
