--- a/_posts/potpourri/2020-09-09-snapshots-march-2023-dc.html
+++ b/_posts/potpourri/2020-09-09-snapshots-march-2023-dc.html
@@ -72,7 +72,8 @@ images:
   desc: wherever I go, I am constantly entranced by the fishies 
 - path: nat-museum-of-art-niagra.jpg 
   alt: painting of niagra falls in a golden frame 
-  name: Niagra, Frederic Edwin Church
+  title: Niagra
+  name: Frederic Edwin Church
   loc: The National Gallery of Art 
   loc2: National Mall, DC 
   date: March 17, 2023 
