--- a/_posts/potpourri/2020-09-11-snapshots-may-23-seattle.html
+++ b/_posts/potpourri/2020-09-11-snapshots-may-23-seattle.html
@@ -155,24 +155,27 @@ images:
   desc: festival of art, crafts, music, and food (to scale)
 - path: gathering-storm-sam.jpg
   alt: painting of koi fish in a transluscent water pond 
-  name: Gathering Storm 
+  title: Gathering Storm
+  name: Lin Onus 
   loc: Seattle Art Museum 
   loc2: Downtown Seattle, WA 
   date: May 29, 2023 
   desc: this picture, nor the poster I took home, can do justice to the ethereal beauty of the real painting 
 - path: puget-sound-sam.jpg 
-  alt: painting of puget sound 
-  name: Puget Sound on the Pacific Coast
+  alt: painting of puget sound
+  title: Puget Sound on the Pacific Coast
+  name: Albert Bierstadt
   loc: Seattle Art Musem 
   loc2: Downtown Seattle, WA 
   date: May 29, 2023 
 - path: scream-room-sam.jpg 
   alt: mats on the floor and a large neon sign saying "i've composed a new american national anthem - take a knee and scream until you can't breathe"
-  name: Neon American Anthem
+  title: Neon American Anthem
+  name: Nicholas Galanin
   loc: Seattle Art Museum 
   loc2: Downtown Seattle, WA 
   date: May 29, 2023 
-  desc: too shy to kneel and scream - perhaps very telling 
+  desc: too shy to kneel and scream 
 - path: citizen-m.jpg 
   alt: hotel bar 
   name: CitizenM 
