--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@ layout: page
   </p>
 
   <p>
-    I think he meant something like a Google site. However, as I've remarked to a friend, "people are only as ambitious as is expected of them."
+    He pry meant something like a Google site. However, as I've remarked to a friend, "people are only as ambitious as is expected of them."
     I don't intend on merely fulfilling expectations. 
   </p>
 
@@ -39,6 +39,6 @@ layout: page
     And for fun posts and pictures, go ahead and explore <a href="{{ site.url }}/blog">my blog</a> and <a href="{{ site.url }}/potpourri">my picture gallery</a>!
   </p>
 
-  <p>Any questions? Reach out; I'd love to get to know you!</p>
+  <p>Any questions? You know where to find me. </p>
 
 </div> 
