--- a/about.html
+++ b/about.html
@@ -39,6 +39,11 @@ layout: page
     And for fun posts and pictures, go ahead and explore <a href="{{ site.url }}/blog">my blog</a> and <a href="{{ site.url }}/potpourri">my picture gallery</a>!
   </p>
 
+  <p>
+    Aside from professional endeavors, I live for reading, writing, traveling, cooking, collecting art, 
+    creating playlists, watching and rating movies, eating A LOT of food, and making wicked birthday cards. 
+  </p>
+
   <p>Any questions? You know where to find me. </p>
 
 </div> 
