add playlist back

--- a/_posts/2000-01-01-jukebox.html
+++ b/_posts/2000-01-01-jukebox.html
@@ -1,10 +1,10 @@
 ---
-title: Currated Playlist 
+title: Jukebox 
 layout: post 
 category: blog
-date: 2000-01-02 00:00
-image: /assets/images/blog/music-note.png
-headerImage: true 
+date: 2000-01-01 00:00
+<!-- image: /assets/images/blog/music-note.png
+headerImage: true  -->
 nodate: true 
 author: kjros 
 description: "listen to my favorite tunes"
