--- a/about.html
+++ b/about.html
@@ -46,4 +46,10 @@ layout: page
 
   <p>Any questions? You know where to find me. </p>
 
+  <p><small>
+    To check out my music taste, try <a href="{{ site.url }}/jukebox">this</a>.
+  </small></p>
+
+  
+
 </div> 
