--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@ layout: page
   <p>Any questions? You know where to find me. </p>
 
   <p><small>
-    To check out my music taste, try <a href="{{ site.url }}/jukebox">this</a>.
+    To check out my music taste, try <a href="{{ site.url }}/blog/jukebox">this</a>.
   </small></p>
 
   
