--- a/about.html
+++ b/about.html
@@ -46,9 +46,9 @@ layout: page
 
   <p>Any questions? You know where to find me. </p>
 
-  <p><small>
+  <!-- <p><small>
     To check out my music taste, try <a href="{{ site.url }}/blog/jukebox">this</a>.
-  </small></p>
+  </small></p> -->
 
   
 
